2005-11-23 Erik Larsson <erik_g_larsson@users.sourceforge.net>
	* itpp/itpp/base/gf2mat.{h,cpp} added (the new GF2 matrix module)
	* itpp/itpp/tests/gf2mat_test.cpp added (test program for GF2 matrix module)
	
2005-11-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Removed some cpu-specific optimise flags from
	CXXFLAGS. The default optimisation is `-O2'. When using GCC compiler
	CXXFLAGS is extended with `-pipe -fomit-frame-pointer'. Moreover,
	`--with-cpu' switch has been renamed to `--with-march', which is
	more intuitive.
	* INSTALL, doc/local/installation.doc: Documentation updated due
	to the changes in `configure.ac'.

2005-11-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/error_counters.{h.cpp}: Fixed a bug in the BLERC
	counter, which caused that errors were not measured if the
	blocksize was longer then the minimum length of input bit vectors.
	Cosmetics changes in the BERC class.

2005-11-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/punct_convcode.{h,cpp}, itpp/comm/convcode.h: Fixed
	bug [1358858]. Now it is possible to use decode_tailbite() method
	for a punctured code.

	* itpp/comm/channel.{h,cpp}: Fixed bug [1358861]. Now the
	destructor properly deletes the fading generators dynamically
	created.

2005-11-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/error_counters.{h,cpp}: BLERC class improved by adding
	setup and clear flags and non default constructor. Now it is
	possible to measure BLER for changing block sizes, e.g. in an
	adaptive transmission.

2005-11-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/channel.cpp: fixed a minor problem with documentation
	parsing by Doxygen (added a few lacking parentheses)

2005-10-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Makefile.common: AM_CPPFLAGS fixed to support building in a
	separate directory (required by rpm-build) 

2005-10-16  Adam Piatyszek  <ediap@users.sourceforge.net>
